FAI-473: CounterfactualExplainer: Add CF support for composite features (#1236)
* Move domains inside Features

* Rewrite tests for new Feature API

* Add composite feature utils

* Support for composite features

* Fix minor style issues

* Re-add floating point accuracy guard

* Change CounterfactualExplainerServiceHandler to new style Features

* Add composite test

* Fix formatting

* Fix formatting

* Updated tests.

* Update tests for new feature types

* Fix imports order

* Fix regression in DecisionModelWrapper

Change was introduced in order to support CF+DMN tests but LIME+DMN test stopped working

* Fix formatting

* Fix merge conflicts

Co-authored-by: Michael Anstis <manstis@redhat.com>